[package]
name = "rustgen"
version = "0.1.0"
authors = ["Yannik <yannik@yannik-sc.de>"]
edition = "2018"
repository = "https://gitlab.com/y_software/rustgen"
readme = "README.md"
license = "MIT"

[dependencies]
handlebars = "3.5.1"
serde_yaml = "0.8.14"
clap = "3.0.0-beta.2"
convert_case = "0.4.0"

[dependencies.serde]
version = "1.0.117"
features = ["derive"]
