[package]
name = "rustgen"
version = "0.2.0"
authors = ["Yannik <yannik@yannik-sc.de>"]
description = "A Rust Code-Generator"
edition = "2018"
repository = "https://gitlab.com/y_software/rustgen"
readme = "README.md"
license = "MIT"

[dependencies]
handlebars = "3.5.3"
serde_yaml = "0.8.17"
serde = { version = "1.0.123", features = ["derive"] }
convert_case = "0.4.0"
regex = "1.4.3"
